# dbzlib-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/database/: mod.rs
src/model/: character.rs  mod.rs  portal.rs
src/util/: error.rs  exception.rs  mod.rs
