[package]
name = "dbzlib-rs"
version = "0.4.0"
edition = "2021"
authors = ["Lahcène Belhadi <lahcene.belhadi@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# JSON Serialization/Deserialization
# https://crates.io/crates/serde
[dependencies.serde]
version = "1.0"
features = ["derive"]

# Row deserialization
# https://crates.io/crates/sqlx
[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-native-tls", "postgres"]

# Async
# https://crates.io/crates/tokio
[dependencies.tokio]
version = "1.28"
features = ["macros"]
